--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
 body {
     margin: 10px;
+    background-color: rgb(240, 240, 240);
+}
+.container{
+    margin-top: 60px;
+}
+
+.buttons {
+    margin-top: 25px;
+}
+
+ .col-md-6 { 
+    text-align: center;
+}
+
+img {
+    height: 400px;
 }
