--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 body {
     margin: 10px;
-    background-color: rgb(240, 240, 240);
+    background-color: rgb(211, 211, 211);
 }
 .container{
-    margin-top: 60px;
+    margin-top: 25px;
+    padding: 40px;
+    background-color: rgba(240,240,240,.9);
 }
 
 .buttons {
