--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     background-color: rgb(240, 240, 240);
 }
 .container{
-    margin-top: 60px;
+    margin-top: 20px;
 }
 
 .buttons {
@@ -12,6 +12,7 @@ body {
 
  .col-md-6 { 
     text-align: center;
+    padding: 40px;
 }
 
 img {
